[package]
name = "lancp"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "lancp"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
hostname = "0.3"
if-addrs = "0.7"
indicatif = "0.17"
inquire = "0.7"
tokio = { version = "1", features = ["full"] }
socket2 = { version = "0.5", features = ["all"] }
walkdir = "2"
